# first_years_test

./: CMakeLists.txt
includes/: day1.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  mainExecutable
src/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  main.cpp
test/: .editorconfig  CMakeLists.txt  day6_test.cpp
